remove empty sections from docs and upload example html

--- a/graphdoc/templates/about.html
+++ b/graphdoc/templates/about.html
@@ -9,6 +9,6 @@
         </div>
     </div>
     <div id="article-contents" class="article-grid-body">
-        {{ config.about_description|markdown|safe }}
+        {{ configs.about_description|markdown|safe }}
     </div>
 </div>
