fix typo in html and parsing schema str

--- a/graphdoc/templates/graphql-docs.html
+++ b/graphdoc/templates/graphql-docs.html
@@ -141,7 +141,7 @@
                         {% include 'enums.html' %}
                     {% endif %}
 
-                    {% if reference.enums %}
+                    {% if reference.unions %}
                         {% include 'unions.html' %}
                     {% endif %}
 
