add compatibility with graphql-core>=2.1.0

--- a/graphdoc/templates/graphql-docs.html
+++ b/graphdoc/templates/graphql-docs.html
@@ -68,7 +68,7 @@
                                        class="pl-4 pr-5 py-1">Queries</a>
                                 </li>
                             {% endif %}
-                            {% if reference.mutations %}
+                            {% if reference.mutation %}
                                 <li class="sidebar-article ">
                                     <a href="#mutations"
                                        class="pl-4 pr-5 py-1">Mutations</a>
