--- a/graphdoc/templates/mutations.html
+++ b/graphdoc/templates/mutations.html
@@ -13,7 +13,7 @@
                 <li class="ml-0  mb-2 lh-condensed">
                     <a href="#about-mutations">About mutations</a>
                 </li>
-                {% for name, field in reference.mutation.fields.items() %}
+                {% for name, field in reference.mutation.fields.items()|sort(attribute="0") %}
                     <li class="ml-0  mb-2 lh-condensed">
                         <a href="#mutations-{{ name|slugify }}">{{ name }}</a>
                     </li>
