--- a/graphdoc/templates/mutations.html
+++ b/graphdoc/templates/mutations.html
@@ -13,7 +13,7 @@
                 <li class="ml-0  mb-2 lh-condensed">
                     <a href="#about-mutations">About mutations</a>
                 </li>
-                {% for name, field in reference.mutation.fields.items()|sort(attribute="0") %}
+                {% for name, field in reference.mutation.fields|dictsort %}
                     <li class="ml-0  mb-2 lh-condensed">
                         <a href="#mutations-{{ name|slugify }}">{{ name }}</a>
                     </li>
@@ -33,7 +33,7 @@
             analogous to performing HTTP verbs such as <code>POST</code>,
             <code>PATCH</code>, and <code>DELETE</code>.
         </p>
-        {% for name, field in reference.mutation.fields.items() %}
+        {% for name, field in reference.mutation.fields|dictsort %}
             <div>
                 <div>
                     <h3 id="mutations-{{ name|slugify }}" class="pt-3">
