--- a/graphdoc/templates/queries.html
+++ b/graphdoc/templates/queries.html
@@ -13,7 +13,7 @@
                 <li class="ml-0  mb-2 lh-condensed">
                     <a href="#about-queries">About queries</a>
                 </li>
-                {% for name, field in reference.query.fields.items() %}
+                {% for name, field in reference.query.fields|dictsort %}
                     <li class="ml-0  mb-2 lh-condensed">
                         <a href="#queries-{{ name|slugify }}">{{ name }}</a>
                     </li>
@@ -27,7 +27,7 @@
             mutations. The <a href="https://graphql.github.io/graphql-spec/June2018/#sec-Type-System">query type</a>
             defines GraphQL operations that retrieve data from the server.
         </p>
-        {% for name, field in reference.query.fields.items()|sort(attribute="0") %}
+        {% for name, field in reference.query.fields|dictsort %}
             <div>
                 <div>
                     <h3 id="queries-{{ name|slugify }}" class="pt-3">
