--- a/graphdoc/templates/index.html
+++ b/graphdoc/templates/index.html
@@ -3,9 +3,9 @@
     <html lang="en">
     <head>
         <meta charset="utf-8"/>
-        <title>{{ configs.title }}</title>
+        <title>GraphQL API Documentation</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="{{ configs.style_src }}">
+        <link rel="stylesheet" href="https://wallee94.github.io/graphdoc/static/styles.css">
         <!--  <link rel="alternate icon" type="image/png" href="/assets/images/site/favicon.png">-->
         <!--  <link rel="icon" type="image/svg+xml" href="/assets/images/site/favicon.svg">-->
     </head>
